@@ -43,6 +43,12 @@
         [% WRAPPER settingGroup title="BLISSMIXER_ANALYSER_EXCLUDE_MEDIA_FOLDERS" desc="BLISSMIXER_ANALYSER_EXCLUDE_MEDIA_FOLDERS_DESC" %]
         <textarea class="stdedit" name="pref_analyser_ignore_dirs" id="analyser_ignore_dirs" cols="80" rows="3">[% prefs.analyser_ignore_dirs %]</textarea>
         [% END %]
+        [% WRAPPER settingGroup title="BLISSMIXER_ANALYSER_MAX_FILES" desc="BLISSMIXER_ANALYSER_MAX_FILES_DESC" %]
+        <input type="text" class="stdedit sliderInput_0_10000_50" name="pref_analyser_max_files" id="analyser_max_files" value="[% prefs.analyser_max_files %]" size="5">
+        [% END %]
+        [% WRAPPER settingGroup title="BLISSMIXER_ANALYSER_MAX_THREADS" desc="BLISSMIXER_ANALYSER_MAX_THREADS_DESC" %]
+        <input type="text" class="stdedit sliderInput_0_256_1" name="pref_analyser_max_threads" id="analyser_max_threads" value="[% prefs.analyser_max_threads %]" size="5">
+        [% END %]
         <br/><hr style="opacity:0.4" class="sub-sep"/><br/>
         <div style="opacity:0.6">[% "BLISSMIXER_ANALYSIS_SETTINGS_NOTE" | string %]</div><br/>
         <button id="analyser" onclick="toggleBlissAnalyser()" type="button" style="margin-bottom:16px"></button>
